# MPCDI

./: .gitignore  CMakeLists.txt  FindTINYXML2.cmake  README.md  README.txt
Examples/ExampleCreateProfileTypes/: CMakeLists.txt  CreateAll.cpp  CreateExample2DMedia.cpp  CreateExample3DSimulation.cpp  CreateExampleAdvanced3D.cpp  CreateExampleShaderLamp.cpp  CreateSampleData.h
Examples/ReadWriteExample/: CMakeLists.txt  CreateSampleProfile.cpp  CreateSampleProfile.h  ReadWriteExample.cpp  VerboseCompareProfile.cpp  VerboseCompareProfile.h
html/: _create_all_8cpp.html  _create_all_8cpp.js  _create_example2_d_media_8cpp.html  _create_example2_d_media_8cpp.js  _create_example3_d_simulation_8cpp.html  _create_example3_d_simulation_8cpp.js  _create_example_advanced3_d_8cpp.html  _create_example_advanced3_d_8cpp.js  _create_example_shader_lamp_8cpp.html  _create_example_shader_lamp_8cpp.js  _create_sample_data_8h.html  _create_sample_data_8h.js  _create_sample_data_8h_source.html  _create_sample_profile_8cpp.html  _create_sample_profile_8cpp.js  _create_sample_profile_8h.html  _create_sample_profile_8h.js  _create_sample_profile_8h_source.html  _doygen_8h.html  _doygen_8h_source.html  _read_write_example_8cpp.html  _read_write_example_8cpp.js  _verbose_compare_profile_8cpp.html  _verbose_compare_profile_8cpp.js  _verbose_compare_profile_8h.html  _verbose_compare_profile_8h.js  _verbose_compare_profile_8h_source.html  annotated.html  annotated.js  class_alpha_map.html  class_beta_map.html  class_buffer.html  class_coordinate_frame.html  class_create2_d_media_profile.html  class_create3_d_simulation_profile.html  class_create_advanced3_d_profile.html  class_create_profile.html  class_create_shader_lamp_profile.html  class_distortion_map.html  class_fileset.html  (+304 more)
html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_7a.js  all_7e.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_69.js  classes_6e.js  classes_70.js  classes_72.js  classes_75.js  classes_77.js  classes_78.js  classes_7a.js  defines_5f.js  defines_63.js  defines_64.js  defines_65.js  (+51 more)
src/: CMakeLists.txt  Doygen.h
src/Base/: mpcdiErrorHelper.cpp
src/Container/: mpcdiAlphaMap.h  mpcdiBetaMap.h  mpcdiBuffer.cpp  mpcdiDataMap.cpp  mpcdiDataMap.h  mpcdiDisplay.cpp  mpcdiFileSet.cpp  mpcdiFileSet.h  mpcdiGeometryWarpFile.cpp  mpcdiGeometryWarpFile.h  mpcdiPFM.cpp  mpcdiPFM.h  mpcdiProfile.cpp  mpcdiProfile.h  mpcdiRegion.cpp
src/Creators/: mpcdiCreateProfile.cpp  mpcdiCreateProfile.h
src/IO/: mpcdiPNGReadWrite.cpp  mpcdiPfmIO.cpp  mpcdiReader.h  mpcdiReaderIntern.cpp  mpcdiReaderIntern.h  mpcdiWriter.h  mpcdiWriterIntern.cpp  mpcdiXMLStrings.h  mpcdiXmlIO.cpp  mpcdiZipIO.cpp
src/Utils/: mpcdiFileUtils.cpp  mpcdiUtils.cpp
